add sitemap page
- add sitemap page
- minor fixes

--- a/payment.html
+++ b/payment.html
@@ -149,7 +149,7 @@
               </div>
               <div class="top-banner-wave"></div>
               <div class="top-banner-image">
-                <img src="img/top_banner_payment.png" title="Прием оплат по ссылке" alt="Прием оплат по ссылке">
+                <img src="img/top_banner/top_banner_payment.png" title="Прием оплат по ссылке" alt="Прием оплат по ссылке">
               </div>
             </section>
             <section class="advantage">
