--- a/sitemap.html
+++ b/sitemap.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Дебетовая карта</title>
+    <title>Карта сайта</title>
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
@@ -118,9 +118,9 @@
         </ul>
       </header>
       <main>
-        <div class="debit-card-page">
+        <div class="sitemap-page">
           <div class="inner">
-            <section class="top-banner pr50">
+            <section class="top-banner">
               <div class="top-banner-content">
                 <ul class="top-banner-content-breadcrumbs list-unstyled">
                   <li class="bx-breadcrumb-item">
@@ -129,150 +129,68 @@
                     </a>
                   </li>
                   <li class="bx-breadcrumb-item">
-                    <a href="/">
-                      <span>Фрилансер</span>
-                    </a>
-                  </li>
-                  <li class="bx-breadcrumb-item">
-                    <span>Дебетовая карта</span>
+                    <span>Карта сайта</span>
                   </li>
                 </ul>
                 <div class="top-banner-content-text">
-                  <h1 class="top-banner-content-text-title">Дебетовая карта</h1>
-                  <div class="top-banner-content-text-desc">
-                    Удобная карта на каждый день с функцией бесконтактной оплаты
-                  </div>
-                  <div class="top-banner-content-text-open">
-                    <a href="#">Открыть счет</a>
-                  </div>
+                  <h1 class="top-banner-content-text-title">Карта сайта</h1>
                 </div>
               </div>
               <div class="top-banner-wave"></div>
-              <div class="top-banner-image">
-                <img src="img/top_banner/top_banner_debit_card.png" title="Дебетовая карта" alt="Дебетовая карта">
-              </div>
             </section>
-            <section class="advantage">
-              <div class="advantage-block">
-                <div class="advantage-block-item nopr">
-                  <div class="advantage-block-item-text">
-                    <div class="advantage-block-item-text-title">5,75%</div>
-                    <div class="advantage-block-item-text-desc">На остаток свыше 30 000 ₽</div>
-                  </div>
-                  <div class="advantage-block-item-image">
-                    <img src="img/adv_img15.png" alt="На остаток свыше 30 000 ₽">
-                  </div>
+            <section class="sitemap">
+              <div class="sitemap-block">
+                <div class="sitemap-block-item">
+                  <ul class="sitemap-block-item-list list-unstyled">
+                    <li><a href="#">Расчетный счет</a></li>
+                    <li><a href="#">ДелоКасса</a></li>
+                    <li><a href="#">Эквайринг</a></li>
+                    <ul class="list-unstyled">
+                      <li><a href="#">Торговый эквайринг</a></li>
+                      <li><a href="#">Интернет-эквайринг</a></li>
+                    </ul>
+                    <li><a href="#">Депозит</a></li>
+                    <li><a href="#">Овердрафт</a></li>
+                    <li><a href="#">Зарплатный проект</a></li>
+                  </ul>
                 </div>
-                <div class="advantage-block-item">
-                  <div class="advantage-block-item-text">
-                    <div class="advantage-block-item-text-title">до 0,5%</div>
-                    <div class="advantage-block-item-text-desc">Возвращаем на счет</div>
-                  </div>
-                  <div class="advantage-block-item-image">
-                    <img src="img/adv_img16.png" alt="Возвращаем на счет">
-                  </div>
+                <div class="sitemap-block-item">
+                  <ul class="sitemap-block-item-list list-unstyled">
+                    <li><a href="#">Начни свой бизнес</a></li>
+                    <li><a href="#">Для бизнеса в интернете</a></li>
+                    <li><a href="#">Для малого бизнеса</a></li>
+                    <li><a href="#">Фрилансер</a></li>
+                    <li><a href="#">Все инструменты для вашего бизнеса</a></li>
+                    <ul class="list-unstyled">
+                      <li><a href="#">Прием оплаты по ссылке</a></li>
+                      <li><a href="#">Облачная бухгалтерия</a></li>
+                      <li><a href="#">Корпоративная карта</a></li>
+                      <li><a href="#">Дебетовая карта</a></li>
+                      <li><a href="#">Помощь юриста</a></li>
+                      <li><a href="#">Рублевый вклад</a></li>
+                      <li><a href="#">Переводы</a></li>
+                      <li><a href="#">1С: ДиректБанк</a></li>
+                    </ul>
+                    <li><a href="#">Бонусная программа</a></li>
+                  </ul>
                 </div>
-                <div class="advantage-block-item nopr fl-end">
-                  <div class="advantage-block-item-text">
-                    <div class="advantage-block-item-text-title">без комиссии</div>
-                    <div class="advantage-block-item-text-desc">Снимайте деньги в банкоматах банков-партнеров</div>
-                  </div>
-                  <div class="advantage-block-item-image">
-                    <img src="img/adv_img17.png" alt="Снимайте деньги в банкоматах банков-партнеров">
-                  </div>
-                </div>
-              </div>
-            </section>
-            <section class="payment-system">
-              <div class="payment-system-text">
-                <div class="payment-system-text-desc">
-                  Подключите карту к системам <a href="#">Apple Pay</a>, <a href="#">Samsung Pay</a> или <a href="#">Google Pay</a> и оплачивайте покупки смартфоном
-                </div>
-              </div>
-              <div class="payment-system-block">
-                <div class="payment-system-block-item">
-                  <img src="img/icon_applepay.svg" alt="">
-                </div>
-                <div class="payment-system-block-item">
-                  <img src="img/icon_googlepay.svg" alt="">
-                </div>
-                <div class="payment-system-block-item">
-                  <img src="img/icon_samsungpay.svg" alt="">
-                </div>
-              </div>
-            </section>
-            <section class="features">
-              <div class="features-title">Дополнительные опции — за 30 ₽ в месяц каждая</div>
-              <div class="features-block">
-                <div class="features-block-item">
-                  <div class="features-block-item-image">
-                    <img src="img/debit_card/features_icon1.svg" alt="">
-                  </div>
-                  <div class="features-block-item-desc">
-                    Кэшбек до 1%
-                  </div>
-                </div>
-                <div class="features-block-item">
-                  <div class="features-block-item-image">
-                    <img src="img/debit_card/features_icon2.svg" alt="">
-                  </div>
-                  <div class="features-block-item-desc">
-                    10 бесплатных снятий в месяц
-                  </div>
-                </div>
-                <div class="features-block-item">
-                  <div class="features-block-item-image">
-                    <img src="img/debit_card/features_icon3.svg" alt="">
-                  </div>
-                  <div class="features-block-item-desc">
-                    СМС-информирование
-                  </div>
-                </div>
-              </div>
-            </section>
-            <section class="request">
-              <div class="request-title">Откройте счет за 10 минут</div>
-              <div class="request-desc">и принимайте платежи сразу</div>
-              <form id="open_account_step1_page">
-                <div class="request-block">
-                  <div class="request-block-phone">
-                    <input type="text" name="phone" id="phone" required="" inputmode="text">
-                    <label for="phone">Телефон</label>
-                  </div>
-                  <div class="request-block-terms">
-                    Ввод номера телефона подтверждает ваше согласие на <a href="#">обработку персональных данных</a>
-                  </div>
-                  <div class="request-block-buttons">
-                    <div class="request-block-buttons-submit">
-                      <input type="submit" value="Продолжить">
-                    </div>
-                    <div class="request-block-buttons-callback">
-                      <a href="#">Перезвоните мне</a>
-                    </div>
-                  </div>
-                </div>
-              </form>
-            </section>
-            <section class="important">
-              <div class="important-title">Важно знать</div>
-              <div class="important-block">
-                <div class="important-block-item">
-                  <div class="important-block-item-title">Какой кэшбэк можно получать по этой карте?</div>
-                  <div class="important-block-item-desc">
-                    В базовом тарифе предусмотреть кэшбэк в размере 0,5% на все покупки. Если подключить опцию, то кэшбэк повышается до 1% и распространяется также на все покупки.
-                  </div>
-                </div>
-                <div class="important-block-item">
-                  <div class="important-block-item-title">Как подключить дополнительные опции?</div>
-                  <div class="important-block-item-desc">
-                    Подключить дополнительные опции можно в интернет-банке или в мобильном приложении, по телефону 8 800 5000 700, а также при личном обращении в офис.
-                  </div>
-                </div>
-                <div class="important-block-item">
-                  <div class="important-block-item-title">Сколько стоит подключение дополнительных опций?</div>
-                  <div class="important-block-item-desc">
-                    Подключение опций бесплатное. Пользование стоит 30 руб. в месяц за каждую опцию.
-                  </div>
+                <div class="sitemap-block-item">
+                  <ul class="sitemap-block-item-list list-unstyled">
+                    <li><a href="#">О банке</a></li>
+                    <li><a href="#">Дистанционное обслуживание</a></li>
+                    <li><a href="#">Журнал про дело</a></li>
+                  </ul>
+                  <ul class="sitemap-block-item-list list-unstyled">
+                    <li><a href="#">Помощь</a></li>
+                    <li><a href="#">Безопасность</a></li>
+                    <li><a href="#">Акции</a></li>
+                    <li><a href="#">Тарифы</a></li>
+                    <li><a href="#">Офисы и банкоматы</a></li>
+                    <li><a href="#">Реквизиты филиала</a></li>
+                    <li><a href="#">Политика конфединциальности</a></li>
+                    <li><a href="#">Партнерская программа</a></li>
+                    <li><a href="#">Письмо в Банк</a></li>
+                  </ul>
                 </div>
               </div>
             </section>
