--- a/open-api.html
+++ b/open-api.html
@@ -149,7 +149,7 @@
               </div>
               <div class="top-banner-wave"></div>
               <div class="top-banner-image">
-                <img src="img/top_banner_open_api.png" title="Open Api" alt="Open Api">
+                <img src="img/top_banner/top_banner_open_api.png" title="Open Api" alt="Open Api">
               </div>
             </section>
             <section class="advantage">
