--- a/salary.html
+++ b/salary.html
@@ -144,7 +144,7 @@
               </div>
               <div class="top-banner-wave"></div>
               <div class="top-banner-image">
-                <img src="img/top_banner_salary.png" title="Зарплатный проект" alt="Зарплатный проект">
+                <img src="img/top_banner/top_banner_salary.png" title="Зарплатный проект" alt="Зарплатный проект">
               </div>
             </section>
             <section class="features">
