--- a/tariffs.html
+++ b/tariffs.html
@@ -138,7 +138,7 @@
               </div>
               <div class="top-banner-wave"></div>
               <div class="top-banner-image">
-                <img src="img/top_banner_tariffs.png" title="Тарифы для бизнеса" alt="Тарифы для бизнеса">
+                <img src="img/top_banner/top_banner_tariffs.png" title="Тарифы для бизнеса" alt="Тарифы для бизнеса">
               </div>
             </section>
             <section class="advantage">
