--- a/partner-program.html
+++ b/partner-program.html
@@ -28,7 +28,7 @@
           </div>
           <ul class="header-nav list-unstyled">
             <li class="header-nav-item"><a href="/about/">О банке</a></li>
-            <li class="header-nav-item"><a href="/remote-service/">Дистанционное обслуживание</a></li>
+            <li class="header-nav-item"><a href="/remote-service/">ДелоБанк Онлайн</a></li>
             <li class="header-nav-item"><a href="/journal/">Журнал про дело</a></li>
           </ul>
           <div class="header-lk">
@@ -75,7 +75,7 @@
                       <a href="#">О банке</a>
                     </div>
                     <div class="header-mb-wrapper-inner-block-nav-item">
-                      <a href="#">Дистанционное обслуживание</a>
+                      <a href="#">ДелоБанк Онлайн</a>
                     </div>
                     <div class="header-mb-wrapper-inner-block-nav-item">
                       <a href="#">Про дело</a>
@@ -490,7 +490,6 @@
             <li class="footer-nav-item"><a href="/help/">Помощь</a></li>
             <li class="footer-nav-item"><a href="/site-map/">Карта сайта</a></li>
             <li class="footer-nav-item"><a href="/policy/">Политика конфиденциальности</a></li>
-            <li class="footer-nav-item"><a href="/safety/">Безопасность</a></li>
             <li class="footer-nav-item"><a href="/tariffs/">Тарифы</a></li>
           </ul>
           <ul class="footer-nav-small list-unstyled">
@@ -499,6 +498,9 @@
             </li>
             <li class="footer-nav-small-item mail">
               <a href="#">Письмо в Банк</a>
+            </li>
+            <li class="footer-nav-small-item safety">
+              <a href="#">Безопасность</a>
             </li>
           </ul>
           <div class="footer-social">
