--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Переводы</title>
+    <title>404</title>
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
@@ -118,103 +118,17 @@
         </ul>
       </header>
       <main>
-        <div class="transfer-page">
+        <div class="not-found-page">
           <div class="inner">
-            <section class="top-banner">
+            <section class="top-banner pr100">
               <div class="top-banner-content">
-                <ul class="top-banner-content-breadcrumbs list-unstyled">
-                  <li class="bx-breadcrumb-item">
-                    <a href="/" title="Главная" itemprop="item">
-                      <span itemprop="name">Главная</span>
-                    </a>
-                  </li>
-                  <li class="bx-breadcrumb-item">
-                    <a href="/">
-                      <span>Все инструменты для бизнеса</span>
-                    </a>
-                  </li>
-                  <li class="bx-breadcrumb-item">
-                    <span>Переводы</span>
-                  </li>
-                </ul>
                 <div class="top-banner-content-text">
-                  <h1 class="top-banner-content-text-title">Переводы</h1>
-                  <div class="top-banner-content-text-desc">
-                    В банкоматах «СКБ-банка» <br>
-                    или на сайтах «СКБ-банка» и «Газэнергобанка»
-                  </div>
-                  <div class="top-banner-content-text-open">
-                    <a href="#">Открыть счет</a>
-                  </div>
+                  <h1 class="top-banner-content-text-title">В интернет-ссылках бывают ошибки. В платежах и операциях — нет.</h1>
+                  <div class="top-banner-content-text-open"><a href="/"><span>На главную</span></a></div>
                 </div>
               </div>
-              <div class="top-banner-wave"></div>
               <div class="top-banner-image">
-                <img src="img/top_banner/top_banner_transfer.png" title="Переводы" alt="Переводы">
-              </div>
-            </section>
-            <section class="advantage">
-              <div class="advantage-title">Переводы в банкоматах «СКБ-банка»</div>
-              <ul class="list list-unstyled">
-                <li>По договору с получателем перевода — 1% от суммы перевода, минимум 25 ₽</li>
-                <li>Переводы через «КИВИ» — 1,8% от суммы перевода, минимум 10 ₽</li>
-                <li>Оплата административных штрафов — 30 ₽ за оплату</li>
-                <li>Оплата кредитов других банков — 60 ₽</li>
-                <li>Переводы на карты больше 10 000 ₽ — 1,5% от суммы, не менее 30 ₽</li>
-              </ul>
-            </section>
-            <section class="advantage">
-              <div class="advantage-title">На сайтах «СКБ-банка» и «Газэнергобанка»</div>
-              <ul class="list list-unstyled">
-                <li>На карты «СКБ-банка» и «Газэнергобанка» — без комиссии</li>
-                <li>На карты других банков больше 10 000 ₽ — 1,5% от суммы, не менее 30 ₽</li>
-              </ul>
-            </section>
-            <section class="request">
-              <div class="request-title">Откройте счет за 10 минут</div>
-              <div class="request-desc">и принимайте платежи сразу</div>
-              <form id="open_account_step1_page">
-                <div class="request-block">
-                  <div class="request-block-phone">
-                    <input type="text" name="phone" id="phone" required="" inputmode="text">
-                    <label for="phone">Телефон</label>
-                  </div>
-                  <div class="request-block-terms">
-                    Ввод номера телефона подтверждает ваше согласие на <a href="#">обработку персональных данных</a>
-                  </div>
-                  <div class="request-block-buttons">
-                    <div class="request-block-buttons-submit">
-                      <input type="submit" value="Продолжить">
-                    </div>
-                    <div class="request-block-buttons-callback">
-                      <a href="#">Перезвоните мне</a>
-                    </div>
-                  </div>
-                </div>
-              </form>
-            </section>
-            <section class="important">
-              <div class="important-title">Важно знать</div>
-              <div class="important-block">
-                <div class="important-block-item">
-                  <div class="important-block-item-title">Как перевести деньги бесплатно на карту?</div>
-                  <div class="important-block-item-desc">
-                    С помощью интернет-банка можно бесплатно перевести деньги на карты клиентам «СКБ-банка».
-                    А, если воспользоваться Системой быстрых платежей, то можно переводить до  деньги на карты других банков в пределах 6 000 руб. в день без комиссии. Если сумма перевода будет больше, то комиссия составит 1% от суммы превышения, мин. 30 руб., макс – 300 руб.
-                  </div>
-                </div>
-                <div class="important-block-item">
-                  <div class="important-block-item-title">В течение какого времени деньги поступят на карту?</div>
-                  <div class="important-block-item-desc">
-                    При переводе деньги поступят на счет получателя в течение дня.
-                  </div>
-                </div>
-                <div class="important-block-item">
-                  <div class="important-block-item-title">Как ещё можно перевести деньги на карту другого банка?</div>
-                  <div class="important-block-item-desc">
-                    Деньги можно перевести в интернет-банке или в мобильном приложении. Перевод доступен по номеру карты.
-                  </div>
-                </div>
+                <img src="img/top_banner/top_banner_404.png" title="Извините, такой страницы нет" alt="Извините, такой страницы нет">
               </div>
             </section>
           </div>
