--- a/delokassa.html
+++ b/delokassa.html
@@ -525,7 +525,7 @@
                 <div class="steps-block-item">
                   <div class="steps-block-item-image">
                     <div class="steps-block-item-image-circle">
-                      <svg width="63" height="62" viewBox="0 0 63 62" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="31.6309" cy="31" r="30.5" fill="white" stroke="#E6E8E0"></circle><path d="M21.325 40H21C19.3431 40 18 38.6569 18 37V18C18 16.3431 19.3431 15 21 15H34.8503C36.0375 15 37 15.9625 37 17.1497V17.1497" stroke="#F65E64" stroke-width="2" stroke-linecap="round"></path><rect x="25.5645" y="21.9746" width="18.6667" height="25.0256" rx="2" fill="white" stroke="#F65E64" stroke-width="2"></rect></svg>
+                      <svg width="63" height="62" viewBox="0 0 63 62" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="31.6309" cy="31" r="30.5" fill="white" stroke="#E6E8E0"></circle><path d="M21.325 40H21C19.3431 40 18 38.6569 18 37V18C18 16.3431 19.3431 15 21 15H34.8503C36.0375 15 37 15.9625 37 17.1497V17.1497" stroke="#F65E64" stroke-width="2" stroke-linecap="round"></path><rect x="25.5645" y="21.9746" width="18.6667" height="25.0256" rx="2" stroke="#F65E64" stroke-width="2"></rect></svg>
                     </div>
                     <div class="steps-block-item-image-progress"></div>
                   </div>
@@ -594,15 +594,27 @@
               <div class="important-title">Важно знать</div>
               <div class="important-block">
                 <div class="important-block-item">
-                  <div class="important-block-item-title">Как выбрать ДелоКассу?</div>
+                  <div class="important-block-item-title">Как поменять кассовую ленту?</div>
                   <div class="important-block-item-desc">
-                    Идейные соображения высшего порядка, а также начало повседневной работы по формированию позиции играет важную роль в формировании существенных финансовых и административных условий. С другой стороны укрепление и развитие структуры позволяет оценить значение направлений прогрессивного развития.
+                    Открыть крышку отсека, в котором установлена чековая лента. Заменить ленту. Вытянуть свободный конец ленты за пределы отрезчика и закрыть крышку.
                   </div>
                 </div>
                 <div class="important-block-item">
-                  <div class="important-block-item-title">Зачем нужна ДелоКасса?</div>
+                  <div class="important-block-item-title">Как посмотреть отчеты по проведённым чекам?</div>
                   <div class="important-block-item-desc">
-                    Идейные соображения высшего порядка, а также начало повседневной работы по формированию позиции играет важную роль в формировании существенных финансовых и административных условий. С другой стороны укрепление и развитие структуры позволяет оценить значение направлений прогрессивного развития.
+                    В левом меню необходимо выбрать «Список заказов».
+                  </div>
+                </div>
+                <div class="important-block-item">
+                  <div class="important-block-item-title">Как загрузить каталог товаров из файла?</div>
+                  <div class="important-block-item-desc">
+                    Для загрузки каталога товаров, на главной странице личного кабинета кассы нажмите кнопку «Импорт», или же зайдите в раздел «Каталог» – «Товары» и также нажмите кнопку «Импорт».
+                  </div>
+                </div>
+                <div class="important-block-item">
+                  <div class="important-block-item-title">Работает ли касса с весами?</div>
+                  <div class="important-block-item-desc">
+                    Да работает, через штрих-код. Напрямую с интегрированными весами не работает.
                   </div>
                 </div>
               </div>
