--- a/internet-acquiring.html
+++ b/internet-acquiring.html
@@ -344,9 +344,21 @@
               <div class="important-title">Важно знать</div>
               <div class="important-block">
                 <div class="important-block-item">
-                  <div class="important-block-item-title">Что такое интернет эквайринг?</div>
+                  <div class="important-block-item-title">Как отправить чек клиенту после получения от него оплаты?</div>
                   <div class="important-block-item-desc">
-                    Идейные соображения высшего порядка, а также начало повседневной работы по формированию позиции играет важную роль в формировании существенных финансовых и административных условий. С другой стороны укрепление и развитие структуры позволяет оценить значение направлений прогрессивного развития.
+                    Чек после оплаты клиенту отправляется на почту, либо на мобильный телефон.
+                  </div>
+                </div>
+                <div class="important-block-item">
+                  <div class="important-block-item-title">У меня нет сайта. Могу ли я подключить услугу?</div>
+                  <div class="important-block-item-desc">
+                    Нет. Для подключения услуги сайт необходим.
+                  </div>
+                </div>
+                <div class="important-block-item">
+                  <div class="important-block-item-title">В течение какого времени после приема оплаты через интернет-эквайринг деньги поступят на счет?</div>
+                  <div class="important-block-item-desc">
+                    Зачисление денежных средств на счет происходит не позднее следующего дня.
                   </div>
                 </div>
               </div>
