--- a/trade-acquiring.html
+++ b/trade-acquiring.html
@@ -345,9 +345,21 @@
               <div class="important-title">Важно знать</div>
               <div class="important-block">
                 <div class="important-block-item">
-                  <div class="important-block-item-title">Что такое торговый эквайринг?</div>
+                  <div class="important-block-item-title">Какой терминал выдается в аренду?</div>
                   <div class="important-block-item-desc">
-                    Идейные соображения высшего порядка, а также начало повседневной работы по формированию позиции играет важную роль в формировании существенных финансовых и административных условий. С другой стороны укрепление и развитие структуры позволяет оценить значение направлений прогрессивного развития.
+                    В аренду дается терминал Verifone VX520 стационарный/мобильный. Терминал можно подключить к интернету по проводу, либо с использованием сим-карты.
+                  </div>
+                </div>
+                <div class="important-block-item">
+                  <div class="important-block-item-title">Какой ОКВЭД (если их несколько) указывать в заявке на торговый эквайринг?</div>
+                  <div class="important-block-item-desc">
+                    Необходимо указывать тот ОКВЭД, который относится к деятельности конкретной торговой точки.
+                  </div>
+                </div>
+                <div class="important-block-item">
+                  <div class="important-block-item-title">Терминал не принимает оплату картами/не реагирует на карты. Что делать?</div>
+                  <div class="important-block-item-desc">
+                    Вам необходимо перезагрузить терминал. Для проверки просто проведите оплату картой на любую сумму.
                   </div>
                 </div>
               </div>
