--- a/actions-acquiring.html
+++ b/actions-acquiring.html
@@ -216,7 +216,7 @@
             </section>
             <section class="become-client">
               <div class="become-client-content">
-                <div class="become-client-content-title">Если вы еще не клиент ДелоБанка и хотите ставку 0,8% –</div>
+                <div class="become-client-content-title">Если вы еще не клиент ДелоБанка и хотите ставку 0,8%&nbsp;–</div>
                 <div class="become-client-content-desc">оформите заявку на расчетный счет, это займет всего пару минут</div>
                 <div class="become-client-content-button">
                   <a href="#" class="ui-btn red">Открыть счет</a>
