--- a/delokassa.html
+++ b/delokassa.html
@@ -238,7 +238,6 @@
             </section>
             <section class="purpose">
               <div class="purpose-title">Делокасса для разных задач</div>
-              <div class="purpose-desc">Выберите кассу под специфику вашего бизнеса</div>
               <div class="purpose-block">
                 <div class="purpose-block-item">
                   <div class="purpose-block-item-title">ДелоКасса 5+</div>
@@ -317,72 +316,43 @@
             </section>
             <section class="cost">
               <div class="cost-title">Сколько стоит</div>
-              <div class="cost-desc">За любой комплект оборудования на выбор</div>
               <div class="cost-block">
+                <div class="cost-block-title">ДелоКасса по 54-ФЗ «под&nbsp;ключ»</div>
                 <div class="cost-block-item">
-                  <div class="cost-block-item-badge"></div>
-                  <div class="cost-block-item-title">ДелоКасса по 54-ФЗ «под ключ»</div>
                   <div class="cost-block-item-value">1 700 ₽/мес</div>
                   <div class="cost-block-item-desc">Первые 2 года, далее – 500 руб.</div>
                   <div class="cost-block-item-table">
-                    <div class="cost-block-item-table-title">Комиссия от оборота</div>
+                    <div class="cost-block-item-table-title">Комиссия зависит от тарифного плана</div>
                     <div class="cost-block-item-table-line">
-                      <div class="cost-block-item-table-line-desc">свыше 300 000 ₽</div>
-                      <div class="cost-block-item-table-line-value">1,8%</div>
-                    </div>
-                    <div class="cost-block-item-table-line">
-                      <div class="cost-block-item-table-line-desc">до 300 000 ₽/мес</div>
-                      <div class="cost-block-item-table-line-value">2%</div>
+                      <div class="cost-block-item-table-line-desc">Выгодный старт</div>
+                      <div class="cost-block-item-table-line-value">2,1%</div>
                     </div>
                     <div class="cost-block-item-table-line">
-                      <div class="cost-block-item-table-line-desc">до 150 000 ₽ </div>
-                      <div class="cost-block-item-table-line-value">2,2%</div>
+                      <div class="cost-block-item-table-line-desc">Активный рост</div>
+                      <div class="cost-block-item-table-line-value">1,9%</div>
                     </div>
-                    <div class="cost-block-item-table-list">
-                      <div class="cost-block-item-table-list-title">Все хлопоты возьмем на себя:</div>
-                      <ul class="list-unstyled">
-                        <li>приобретём ФН и ЭЦП <div class="tooltip"><span>1</span></div></li>
-                        <li>зарегистрируем кассу в ФНС <div class="tooltip"><span>2</span></div></li>
-                        <li>заключим договор с ОФД <div class="tooltip"><span>3</span></div></li>
-                      </ul>
+                    <div class="cost-block-item-table-line">
+                      <div class="cost-block-item-table-line-desc">Больше возможностей</div>
+                      <div class="cost-block-item-table-line-value">1,7%</div>
                     </div>
-                  </div>
-                  <div class="cost-block-item-line">
-                    <div class="cost-block-item-line-point">
-                      <div class="cost-block-item-line-point-value">от 1,8%</div>
-                      <div class="cost-block-item-line-point-desc">Комиссия за эквайринг <br>за 1 терминал, % от торгового <br>оборота ₽/мес.</div>
+                    <div class="cost-block-item-table-line">
+                      <div class="cost-block-item-table-line-desc">Надежное решение</div>
+                      <div class="cost-block-item-table-line-value">1,7%</div>
                     </div>
-                    <div class="cost-block-item-line-point">
-                      <div class="cost-block-item-line-point-value">от 0 ₽/мес</div>
-                      <div class="cost-block-item-line-point-desc">Обслуживание <br>расчетного счета</div>
+                    <div class="cost-block-item-table-line">
+                      <div class="cost-block-item-table-line-desc">Высшая лига</div>
+                      <div class="cost-block-item-table-line-value">1,7%</div>
                     </div>
                   </div>
                 </div>
                 <div class="cost-block-item">
-                  <div class="cost-block-item-title">ДелоКасса по 54-ФЗ с эквайрингом</div>
-                  <div class="cost-block-item-value">500 ₽/мес</div>
-                  <div class="cost-block-item-table">
-                    <div class="cost-block-item-table-title">Комиссия от оборота</div>
-                    <div class="cost-block-item-table-line">
-                      <div class="cost-block-item-table-line-desc">свыше 300 000 ₽</div>
-                      <div class="cost-block-item-table-line-value">1,8%</div>
-                    </div>
-                    <div class="cost-block-item-table-line">
-                      <div class="cost-block-item-table-line-desc">до 300 000 ₽/мес</div>
-                      <div class="cost-block-item-table-line-value">2%</div>
-                    </div>
-                    <div class="cost-block-item-table-line">
-                      <div class="cost-block-item-table-line-desc">до 150 000 ₽ </div>
-                      <div class="cost-block-item-table-line-value">2,2%</div>
-                    </div>
-                    <div class="cost-block-item-table-list">
-                      <div class="cost-block-item-table-list-title">Вы самостоятельно:</div>
-                      <ul class="list-unstyled">
-                        <li>приобретаете ФН и ЭЦП <div class="tooltip"><span>1</span></div></li>
-                        <li>регистрируете кассу в ФНС <div class="tooltip"><span>2</span></div></li>
-                        <li>заключаете договор с ОФД <div class="tooltip"><span>3</span></div></li>
-                      </ul>
-                    </div>
+                  <div class="cost-block-item-list">
+                    <div class="cost-block-item-list-title">Все хлопоты возьмем на себя:</div>
+                    <ul class="list-unstyled">
+                      <li>приобретём ФН и ЭЦП <div class="tooltip"><span>1</span></div></li>
+                      <li>зарегистрируем кассу в ФНС <div class="tooltip"><span>2</span></div></li>
+                      <li>заключим договор с ОФД <div class="tooltip"><span>3</span></div></li>
+                    </ul>
                   </div>
                   <div class="cost-block-item-line">
                     <div class="cost-block-item-line-point">
@@ -392,6 +362,13 @@
                     <div class="cost-block-item-line-point">
                       <div class="cost-block-item-line-point-value">от 0 ₽/мес</div>
                       <div class="cost-block-item-line-point-desc">Обслуживание <br>расчетного счета</div>
+                    </div>
+                  </div>
+                  <div class="tariffs-about">
+                    <div class="tariffs-about-block">
+                      <div class="tariffs-about-block-item">
+                        <a href="#" target="_blank">Тариф на подключение услуги</a>
+                      </div>
                     </div>
                   </div>
                 </div>
